# lightnings

./: .dockerignore  .editorconfig  .env  .gitignore  .style.yapf  Dockerfile  Pipfile  README.md  Untitled.ipynb  docker-compose.yml  local.env  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scrapper.ipynb  script.sh  source.py  sql_play.ipynb  uniqueness lightnings.ipynb  upoload.py  user_agents.ipynb
client/: README.md  config.js  index.html  webpack.config.js
client/scripts/: Leaflet.Icon.Glyph.js  data.js  gallery.js  lightnings.js  lightningsData.js  loadMedia.js  loadMeteo.js  map.js  mediaStorage.js  meteoData.js  storage.js
client/src/: index.html  index.js
client/styles/: base.css  base.css.map  base.scss  gallery.css  gallery.css.map  gallery.scss  map.css  map.css.map  map.scss
config/: local.env
database/: __init__.py  scrap_instagram.py  sqlalchemy_declarative.py  upload_lightnings.py
database/dumps/: 2019-05-18.dump  README.MD
database/entity/: __init__.py  lightning.py  media.py
db/: sqlalchemy_declarative.py
instagram/: info.py  media_info.py  proxy.py  scraper.py  upload_lightnings_db.py
lightnings/: config.py
lightnings/database/: location.py  multimedia.py  thunder.py  utils.py
lightnings_data/: upload_lightnings.py
map/: map.html  map.py
notebooks/: test.ipynb
scripts/: create_database.sh  database_init.sh  docker_up.sh  dump.sh  restore.sh  run.sh  run_docker.sh  start.sh
server/: WSHandler.py  config.py  server.py
server/map/: map.py
shell/: dump.sh
thunder_finder/: upload_thunders.py
(+80 files in other folders)
