[tool.poetry]
name = "lightnings"
version = "0.1.0"
description = ""
authors = ["davydovdmitry <davydofdmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
sqlalchemy = "^1.3.19"
psycopg2-binary = "^2.8.6"
aiofiles = "^0.5.0"
aiohttp_cors = "^0.7.0"
tqdm = "^4.49.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
